--- a/main.html
+++ b/main.html
@@ -37,10 +37,10 @@
                 <div class="variant">
                     <h3>Select a Color:</h3>
                     <ul>
-                        <li><img src="green-link.png" alt="Green Apple"></li>
-                        <li><img src="yellow-link.png" alt="Yellow Apple"></li>
-                        <li><img src="orange-link.png" alt="Orange Apple"></li>
-                        <li><img src="red-link.png" alt="Red Apple"></li>
+                        <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png" alt="Green Apple"></li>
+                        <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302752/codepen/delicious-apples/yellow-apple.png" alt="Yellow Apple"></li>
+                        <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302427/codepen/delicious-apples/orange-apple.png" alt="Orange Apple"></li>
+                        <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302285/codepen/delicious-apples/red-apple.png" alt="Red Apple"></li>
                     </ul>
                 </div>
 
