--- a/main.html
+++ b/main.html
@@ -1,59 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apple Product</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Apple Product</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="main-layout">
-        <section class="product">
-            <div class="product__photo">
-                <div class="photo-container">
-                    <div class="photo-main">
-                        <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537291846/codepen/delicious-apples/green-apple-with-slice.png" 
-                             alt="Main Apple View">
-                    </div>
-                    <div class="photo-album">
-                        <ul>
-                            <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png" alt="Apple View 1"></li>
-                            <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303532/codepen/delicious-apples/half-apple.png" alt="Apple View 2"></li>
-                            <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303160/codepen/delicious-apples/green-apple-flipped.png" alt="Apple View 3"></li>
-                            <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303708/codepen/delicious-apples/apple-top.png" alt="Apple View 4"></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+  <div class="main-layout">
+    <section class="product">
+      <div class="product__photo">
+        <div class="photo-container">
+          <div class="photo-main">
+            <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537291846/codepen/delicious-apples/green-apple-with-slice.png" 
+                 alt="Main Apple View">
+          </div>
+          <div class="photo-album">
+            <ul>
+              <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png" alt="Apple View 1"></li>
+              <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303532/codepen/delicious-apples/half-apple.png" alt="Apple View 2"></li>
+              <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303160/codepen/delicious-apples/green-apple-flipped.png" alt="Apple View 3"></li>
+              <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303708/codepen/delicious-apples/apple-top.png" alt="Apple View 4"></li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
-            <div class="product__info">
-                <h1>Delicious Apples</h1>
-                <span>CODE: 45999</span>
+      <div class="product__info">
+        <h1>Delicious Apples</h1>
+        <span>CODE: 45999</span>
 
-                <div class="price">
-                    Price: $7.93
-                </div>
+        <div class="price">
+          Price: $7.93
+        </div>
 
-                <div class="variant">
-                    <h3>Select a Color:</h3>
-                    <ul>
-                        <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png" alt="Green Apple"></li>
-                        <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302752/codepen/delicious-apples/yellow-apple.png" alt="Yellow Apple"></li>
-                        <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302427/codepen/delicious-apples/orange-apple.png" alt="Orange Apple"></li>
-                        <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302285/codepen/delicious-apples/red-apple.png" alt="Red Apple"></li>
-                    </ul>
-                </div>
+        <div class="variant">
+          <h3>Select a Color:</h3>
+          <ul>
+            <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png" alt="Green Apple"></li>
+            <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302752/codepen/delicious-apples/yellow-apple.png" alt="Yellow Apple"></li>
+            <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302427/codepen/delicious-apples/orange-apple.png" alt="Orange Apple"></li>
+            <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302285/codepen/delicious-apples/red-apple.png" alt="Red Apple"></li>
+          </ul>
+        </div>
 
-                <div class="description">
-                    <h3>BENEFITS</h3>
-                    <p>Apples are rich in fiber, vitamins, and antioxidants that help promote heart health and boost immunity.</p>
-                </div>
+        <div class="description">
+          <h3>BENEFITS</h3>
+          <p>Apples are rich in fiber, vitamins, and antioxidants that help promote heart health and boost immunity.</p>
+        </div>
 
-                <div class="add-to-cart">
-                    <button>Add to Cart</button>
-                </div>
-            </div>
-        </section>
-    </div>
+        <div class="add-to-cart">
+          <button>ADD TO CART</button>
+        </div>
+      </div>
+    </section>
+  </div>
 </body>
 </html>
